--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   encrypt: ^5.0.3
   pointycastle: ^3.9.1
 
+  fading_marquee_widget: ^1.0.2
+
+  # drop down
+  dropdown_button2: ^2.3.9
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
